# lbbs

./: .dockerignore  .gitattributes  .gitignore  AUTHORS  ChangeLog.md  ChangeLog.zh_CN.md  INSTALL  INSTALL.md  INSTALL.zh_CN.md  Makefile.am  Makefile.in  README  README.md  README.zh_CN.md  Tutorial.md  Tutorial.zh_CN.md  configure  configure.ac  configure.in  docker-compose.yml  makedist.sh
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  docker-image.yml  docker-publish.yml  makefile.yml
Dockerfile/: dockerfile.bbsd  php.ini
conf/: bbsd.conf.default  bbsnet.conf  bbsnet.conf.default  lbbs.logrotate.in  lbbs.service.default  lbbs.service.in  logrotate_bbsd.conf.default  menu.conf
data/: active_board.txt  copyright.txt  editor_help.txt  eula.txt  goodbye.txt  login_error.txt  read_help.txt  register.txt  version.txt  welcome.txt
include/: article_cache.h  article_del.h  article_favor.h  article_favor_display.h  article_op.h  article_post.h  article_view_log.h  bbs.h  bbs_cmd.h  bbs_main.h  bbs_net.h  bwf.h  common.h  constants.h  data_file_mgr.h  database.h  display_user_info.h  editor.h  file_loader.h  fork.h  hash_dict.h  init.h  io.h  ip_mask.h  lml.h  log.h  login.h  memory_pool.h  menu.h  menu_proc.h  net_server.h  reg_ex.h  register.h  screen.h  section_list.h  section_list_display.h  section_list_loader.h  str_process.h  tcplib.h  trie_dict.h  (+8 more)
src/: Makefile.am  Makefile.in  article_cache.c  article_del.c  article_favor.c  article_favor_display.c  article_op.c  article_post.c  article_view_log.c  bbs.c  bbs_cmd.c  bbs_main.c  bbs_net.c  bwf.c  common.c  data_file_mgr.c  database.c  display_user_info.c  editor.c  file_loader.c  fork.c  hash_dict.c  init.c  io.c  ip_mask.c  lml.c  log.c  login.c  main.c  memory_pool.c  menu.c  menu_proc.c  net_server.c  netio.c  passwd.c  reg_ex.c  regex.c  register.c  screen.c  section_list.c  (+24 more)
utils/: Makefile.am  Makefile.in  makedist.sh
utils/conf/: db_conn.conf.php.default
utils/game/: Makefile.am  Makefile.in  chicken.c  chicken.h  money.c  money.h
utils/lib/: db_open.inc.php  section_list.inc.php  str_process.inc.php
